[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Sprites/File_folder-export.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Morning-export.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Main_screen.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/Report_button.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Setting_button-export.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Request_button.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/File_text-export.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Documents/Documents_screen.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Mission/Mission_screen.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/News/News_screen.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Main/Report_screen.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Main/Request_screen.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Settings/Settings_screen.tscn" type="PackedScene" id=13]

[node name="Main_screen" type="Control" groups=[
"update_font",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
Report = ExtResource( 11 )
Get_info = ExtResource( 12 )
Settings = ExtResource( 13 )
Document = ExtResource( 8 )
News = ExtResource( 10 )
Mission = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node" parent="."]

[node name="Mission" type="TextureButton" parent="Buttons"]
margin_left = 152.0
margin_top = 296.0
margin_right = 248.0
margin_bottom = 392.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="News" type="TextureButton" parent="Buttons"]
margin_left = 428.208
margin_top = 296.794
margin_right = 524.208
margin_bottom = 392.794
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Documents" type="TextureButton" parent="Buttons"]
margin_left = 715.527
margin_top = 296.0
margin_right = 811.527
margin_bottom = 392.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="Buttons"]
margin_left = 816.0
margin_top = 552.0
margin_right = 944.0
margin_bottom = 594.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mission_label" type="Label" parent="Buttons"]
margin_left = 160.0
margin_top = 384.0
margin_right = 217.0
margin_bottom = 398.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "MISSION"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="News_label" type="Label" parent="Buttons"]
margin_left = 448.0
margin_top = 384.0
margin_right = 488.0
margin_bottom = 398.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "NEWS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Documents_label" type="Label" parent="Buttons"]
margin_left = 704.0
margin_top = 384.0
margin_right = 816.0
margin_bottom = 398.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "DOCUMENTS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_label" type="Label" parent="Buttons"]
margin_left = 824.0
margin_top = 560.0
margin_right = 936.0
margin_bottom = 584.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "SETTINGS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="Time"]
position = Vector2( 50.5, 50.5 )
texture = ExtResource( 2 )

[node name="Current_time" type="Label" parent="Time"]
margin_left = 112.0
margin_top = 32.0
margin_right = 224.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "DAY 1: MORNING"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Period_time" type="Label" parent="Time"]
margin_left = 112.0
margin_top = 72.0
margin_right = 224.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "30S UNTIL NOON"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main_functions" type="Node" parent="."]

[node name="Report" type="TextureButton" parent="Main_functions"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 16.0
margin_right = 248.0
margin_bottom = 104.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request" type="TextureButton" parent="Main_functions"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.0
margin_top = 120.0
margin_right = 80.0
margin_bottom = 164.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Report_label" type="Label" parent="Main_functions"]
margin_left = 480.0
margin_top = 56.0
margin_right = 529.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "REPORT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request_label" type="Label" parent="Main_functions"]
margin_left = 352.0
margin_top = 136.0
margin_right = 656.0
margin_bottom = 168.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "REQUEST INFORMATION"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request_progress" type="Label" parent="."]
margin_left = 360.0
margin_top = 544.0
margin_right = 656.0
margin_bottom = 558.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "REQUEST PROGRESS:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request_progress_2" type="Label" parent="Request_progress"]
margin_top = 24.0
margin_right = 296.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "0%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/Mission" to="." method="_on_Mission_pressed"]
[connection signal="pressed" from="Buttons/News" to="." method="_on_News_pressed"]
[connection signal="pressed" from="Buttons/Documents" to="." method="_on_Documents_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Main_functions/Report" to="." method="_on_Report_pressed"]
[connection signal="pressed" from="Main_functions/Request" to="." method="_on_Request_pressed"]
